Correction des incohérences : configuration Terraform Cloud, standardisation des secrets, renommage du module ecs-monitoring en ec2-monitoring, correction de l'URL Amplify et mise à jour de la documentation

--- a/.github/workflows/1-infra-deploy-destroy.yml
+++ b/.github/workflows/1-infra-deploy-destroy.yml
@@ -59,6 +59,7 @@ jobs:
         with:
           terraform_version: ">=1.0"  # Version compatible avec le code
           terraform_wrapper: false    # Désactive le wrapper pour une meilleure gestion des erreurs
+          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }} # Token pour Terraform Cloud
 
       # Étape 3: Configuration des identifiants AWS
       - name: Configure AWS Credentials
