--- a/.github/workflows/1-infra-deploy-destroy.yml
+++ b/.github/workflows/1-infra-deploy-destroy.yml
@@ -100,8 +100,7 @@ jobs:
             -var="repo_name=${{ github.repository }}" \
             -var="ssh_private_key_path=~/.ssh/id_rsa" \
             -var="environment=${{ github.event.inputs.environment }}" \
-            -no-color \
-            -out=tfplan
+            -no-color
           echo "::endgroup::"
         continue-on-error: false  # Arrête le workflow si le plan échoue
 
@@ -111,7 +110,15 @@ jobs:
         if: github.event.inputs.action == 'apply'
         run: |
           echo "::group::Terraform Apply"
-          terraform apply -auto-approve tfplan
+          terraform apply -auto-approve \
+            -var="db_username=${{ secrets.DB_USERNAME }}" \
+            -var="db_password=${{ secrets.DB_PASSWORD }}" \
+            -var="ec2_key_pair_name=${{ secrets.EC2_KEY_PAIR_NAME }}" \
+            -var="github_token=${{ secrets.GH_PAT || '' }}" \
+            -var="repo_owner=${{ github.repository_owner }}" \
+            -var="repo_name=${{ github.repository }}" \
+            -var="ssh_private_key_path=~/.ssh/id_rsa" \
+            -var="environment=${{ github.event.inputs.environment }}"
           echo "::endgroup::"
 
           # Affiche les outputs après l'application
@@ -121,19 +128,27 @@ jobs:
           # Stockage des outputs dans les secrets GitHub
           echo "::group::Stockage des outputs dans les secrets GitHub"
           # Récupération des outputs importants
-          EC2_PUBLIC_IP=$(terraform output -raw ec2_public_ip)
-          S3_BUCKET_NAME=$(terraform output -raw s3_bucket_name)
-          MONITORING_EC2_PUBLIC_IP=$(terraform output -raw monitoring_ec2_public_ip)
+          # Utilisation de variables locales pour éviter les erreurs si les outputs n'existent pas
+          EC2_PUBLIC_IP=$(terraform output -raw ec2_public_ip 2>/dev/null || echo "")
+          S3_BUCKET_NAME=$(terraform output -raw s3_bucket_name 2>/dev/null || echo "")
+          MONITORING_EC2_PUBLIC_IP=$(terraform output -raw monitoring_ec2_public_ip 2>/dev/null || echo "")
           RDS_ENDPOINT=$(terraform output -raw rds_endpoint 2>/dev/null || echo "")
           GRAFANA_URL=$(terraform output -raw grafana_url 2>/dev/null || echo "")
           AMPLIFY_APP_URL=$(terraform output -raw amplify_app_url 2>/dev/null || echo "")
 
-          # Stockage dans les secrets GitHub
-          echo "EC2_PUBLIC_IP=$EC2_PUBLIC_IP" >> $GITHUB_ENV
-          echo "S3_BUCKET_NAME=$S3_BUCKET_NAME" >> $GITHUB_ENV
-          echo "MONITORING_EC2_PUBLIC_IP=$MONITORING_EC2_PUBLIC_IP" >> $GITHUB_ENV
+          # Stockage dans les variables d'environnement du workflow
+          if [ ! -z "$EC2_PUBLIC_IP" ]; then
+            echo "EC2_PUBLIC_IP=$EC2_PUBLIC_IP" >> $GITHUB_ENV
+          fi
 
-          # Stockage des outputs additionnels s'ils existent
+          if [ ! -z "$S3_BUCKET_NAME" ]; then
+            echo "S3_BUCKET_NAME=$S3_BUCKET_NAME" >> $GITHUB_ENV
+          fi
+
+          if [ ! -z "$MONITORING_EC2_PUBLIC_IP" ]; then
+            echo "MONITORING_EC2_PUBLIC_IP=$MONITORING_EC2_PUBLIC_IP" >> $GITHUB_ENV
+          fi
+
           if [ ! -z "$RDS_ENDPOINT" ]; then
             echo "RDS_ENDPOINT=$RDS_ENDPOINT" >> $GITHUB_ENV
           fi
