--- a/.github/workflows/1-infra-deploy-destroy.yml
+++ b/.github/workflows/1-infra-deploy-destroy.yml
@@ -100,7 +100,8 @@ jobs:
             -var="repo_name=${{ github.repository }}" \
             -var="ssh_private_key_path=~/.ssh/id_rsa" \
             -var="environment=${{ github.event.inputs.environment }}" \
-            -no-color
+            -no-color \
+            -out=tfplan
           echo "::endgroup::"
         continue-on-error: false  # Arrête le workflow si le plan échoue
 
@@ -110,15 +111,7 @@ jobs:
         if: github.event.inputs.action == 'apply'
         run: |
           echo "::group::Terraform Apply"
-          terraform apply -auto-approve \
-            -var="db_username=${{ secrets.DB_USERNAME }}" \
-            -var="db_password=${{ secrets.DB_PASSWORD }}" \
-            -var="ec2_key_pair_name=${{ secrets.EC2_KEY_PAIR_NAME }}" \
-            -var="github_token=${{ secrets.GH_PAT || '' }}" \
-            -var="repo_owner=${{ github.repository_owner }}" \
-            -var="repo_name=${{ github.repository }}" \
-            -var="ssh_private_key_path=~/.ssh/id_rsa" \
-            -var="environment=${{ github.event.inputs.environment }}"
+          terraform apply -auto-approve tfplan
           echo "::endgroup::"
 
           # Affiche les outputs après l'application
