--- a/.github/workflows/1-infra-deploy-destroy.yml
+++ b/.github/workflows/1-infra-deploy-destroy.yml
@@ -73,6 +73,10 @@ jobs:
       - name: Terraform Init
         id: init
         run: terraform init
+        env:
+          # Transmettre les identifiants AWS à Terraform Cloud
+          TF_VAR_aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          TF_VAR_aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
       # Étape 5: Validation de la configuration Terraform
       - name: Terraform Validate
@@ -100,15 +104,25 @@ jobs:
             -var="repo_name=${{ github.repository }}" \
             -var="ssh_private_key_path=~/.ssh/id_rsa" \
             -var="environment=${{ github.event.inputs.environment }}" \
+            -var="aws_access_key=${{ secrets.AWS_ACCESS_KEY_ID }}" \
+            -var="aws_secret_key=${{ secrets.AWS_SECRET_ACCESS_KEY }}" \
             -no-color \
             -out=tfplan
           echo "::endgroup::"
         continue-on-error: false  # Arrête le workflow si le plan échoue
+        env:
+          # Transmettre les identifiants AWS à Terraform Cloud
+          TF_VAR_aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          TF_VAR_aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
       # Étape 8: Application des changements Terraform
       - name: Terraform Apply
         id: apply
         if: github.event.inputs.action == 'apply'
+        env:
+          # Transmettre les identifiants AWS à Terraform Cloud
+          TF_VAR_aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          TF_VAR_aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
           echo "::group::Terraform Apply"
           terraform apply -auto-approve tfplan
@@ -161,6 +175,10 @@ jobs:
       - name: Terraform Destroy
         id: destroy
         if: github.event.inputs.action == 'destroy'
+        env:
+          # Transmettre les identifiants AWS à Terraform Cloud
+          TF_VAR_aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          TF_VAR_aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
           echo "::group::Terraform Destroy"
           terraform destroy -auto-approve \
@@ -171,7 +189,9 @@ jobs:
             -var="repo_owner=${{ github.repository_owner }}" \
             -var="repo_name=${{ github.repository }}" \
             -var="ssh_private_key_path=~/.ssh/id_rsa" \
-            -var="environment=${{ github.event.inputs.environment }}"
+            -var="environment=${{ github.event.inputs.environment }}" \
+            -var="aws_access_key=${{ secrets.AWS_ACCESS_KEY_ID }}" \
+            -var="aws_secret_key=${{ secrets.AWS_SECRET_ACCESS_KEY }}"
           echo "::endgroup::"
         continue-on-error: false  # Arrête le workflow si la destruction échoue
 
