Correction du problème de cache des dépendances dans le workflow frontend et mise à jour de la documentation

--- a/.github/workflows/3-frontend-deploy.yml
+++ b/.github/workflows/3-frontend-deploy.yml
@@ -47,7 +47,8 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
-          cache: ${{ env.PACKAGE_MANAGER }}
+          # Désactivation du cache pour éviter les erreurs
+          # cache: ${{ env.PACKAGE_MANAGER }}
 
       # Étape 3: Installation des dépendances
       - name: Install dependencies
