--- a/.github/workflows/1-infra-deploy-destroy.yml
+++ b/.github/workflows/1-infra-deploy-destroy.yml
@@ -141,6 +141,8 @@ jobs:
             -var="repo_owner=${{ github.repository_owner }}" \
             -var="repo_name=${{ github.repository }}" \
             -var="ssh_private_key_path=~/.ssh/id_rsa" \
+            -var="ssh_private_key_content=''" \
+            -var="enable_provisioning=false" \
             -var="environment=${{ github.event.inputs.environment }}" \
             -no-color \
             -out=tfplan
@@ -214,6 +216,8 @@ jobs:
             -var="repo_owner=${{ github.repository_owner }}" \
             -var="repo_name=${{ github.repository }}" \
             -var="ssh_private_key_path=~/.ssh/id_rsa" \
+            -var="ssh_private_key_content=''" \
+            -var="enable_provisioning=false" \
             -var="environment=${{ github.event.inputs.environment }}"
           echo "::endgroup::"
         continue-on-error: true  # Continuer même si la destruction échoue pour pouvoir nettoyer les ressources persistantes
