--- a/.github/workflows/1-infra-deploy-destroy.yml
+++ b/.github/workflows/1-infra-deploy-destroy.yml
@@ -289,51 +289,57 @@ jobs:
       # Étape 10: Création des secrets GitHub à partir des outputs Terraform
       - name: Create EC2 Public IP Secret
         if: github.event.inputs.action == 'apply' && env.EC2_PUBLIC_IP != ''
-        uses: gliech/create-github-secret-action@v1
+        uses: hmanzur/actions-set-secret@v2.0.0
         with:
           name: TF_EC2_PUBLIC_IP
           value: ${{ env.EC2_PUBLIC_IP }}
-          pa_token: ${{ secrets.GH_PAT }}
+          repository: ${{ github.repository }}
+          token: ${{ secrets.GH_PAT }}
 
       - name: Create S3 Bucket Secret
         if: github.event.inputs.action == 'apply' && env.S3_BUCKET_NAME != ''
-        uses: gliech/create-github-secret-action@v1
+        uses: hmanzur/actions-set-secret@v2.0.0
         with:
           name: TF_S3_BUCKET_NAME
           value: ${{ env.S3_BUCKET_NAME }}
-          pa_token: ${{ secrets.GH_PAT }}
+          repository: ${{ github.repository }}
+          token: ${{ secrets.GH_PAT }}
 
       - name: Create Monitoring EC2 Secret
         if: github.event.inputs.action == 'apply' && env.MONITORING_EC2_PUBLIC_IP != ''
-        uses: gliech/create-github-secret-action@v1
+        uses: hmanzur/actions-set-secret@v2.0.0
         with:
           name: TF_MONITORING_EC2_PUBLIC_IP
           value: ${{ env.MONITORING_EC2_PUBLIC_IP }}
-          pa_token: ${{ secrets.GH_PAT }}
+          repository: ${{ github.repository }}
+          token: ${{ secrets.GH_PAT }}
 
       - name: Create RDS Endpoint Secret
         if: github.event.inputs.action == 'apply' && env.RDS_ENDPOINT != ''
-        uses: gliech/create-github-secret-action@v1
+        uses: hmanzur/actions-set-secret@v2.0.0
         with:
           name: TF_RDS_ENDPOINT
           value: ${{ env.RDS_ENDPOINT }}
-          pa_token: ${{ secrets.GH_PAT }}
+          repository: ${{ github.repository }}
+          token: ${{ secrets.GH_PAT }}
 
       - name: Create Grafana URL Secret
         if: github.event.inputs.action == 'apply' && env.GRAFANA_URL != ''
-        uses: gliech/create-github-secret-action@v1
+        uses: hmanzur/actions-set-secret@v2.0.0
         with:
           name: TF_GRAFANA_URL
           value: ${{ env.GRAFANA_URL }}
-          pa_token: ${{ secrets.GH_PAT }}
+          repository: ${{ github.repository }}
+          token: ${{ secrets.GH_PAT }}
 
       - name: Create Amplify App URL Secret
         if: github.event.inputs.action == 'apply' && env.AMPLIFY_APP_URL != ''
-        uses: gliech/create-github-secret-action@v1
+        uses: hmanzur/actions-set-secret@v2.0.0
         with:
           name: TF_AMPLIFY_APP_URL
           value: ${{ env.AMPLIFY_APP_URL }}
-          pa_token: ${{ secrets.GH_PAT }}
+          repository: ${{ github.repository }}
+          token: ${{ secrets.GH_PAT }}
 
       # Étape 11: Résumé de l'exécution
       - name: Summary
