--- a/.github/workflows/1-infra-deploy-destroy.yml
+++ b/.github/workflows/1-infra-deploy-destroy.yml
@@ -287,59 +287,60 @@ jobs:
         continue-on-error: true  # Continuer même si le nettoyage échoue
 
       # Étape 10: Création des secrets GitHub à partir des outputs Terraform
-      - name: Create EC2 Public IP Secret
-        if: github.event.inputs.action == 'apply' && env.EC2_PUBLIC_IP != ''
-        uses: hmanzur/actions-set-secret@v2.0.0
+      # Création des secrets GitHub à partir des outputs Terraform
+      - name: Create GitHub Secrets from Terraform Outputs
+        if: github.event.inputs.action == 'apply'
+        uses: gliech/create-github-secret-action@v1
         with:
           name: TF_EC2_PUBLIC_IP
           value: ${{ env.EC2_PUBLIC_IP }}
-          repository: ${{ github.repository }}
-          token: ${{ secrets.GH_PAT }}
+          pa_token: ${{ secrets.GH_PAT }}
+        continue-on-error: true
 
       - name: Create S3 Bucket Secret
         if: github.event.inputs.action == 'apply' && env.S3_BUCKET_NAME != ''
-        uses: hmanzur/actions-set-secret@v2.0.0
+        uses: gliech/create-github-secret-action@v1
         with:
           name: TF_S3_BUCKET_NAME
           value: ${{ env.S3_BUCKET_NAME }}
-          repository: ${{ github.repository }}
-          token: ${{ secrets.GH_PAT }}
+          pa_token: ${{ secrets.GH_PAT }}
+        continue-on-error: true
 
       - name: Create Monitoring EC2 Secret
         if: github.event.inputs.action == 'apply' && env.MONITORING_EC2_PUBLIC_IP != ''
-        uses: hmanzur/actions-set-secret@v2.0.0
+        uses: gliech/create-github-secret-action@v1
         with:
           name: TF_MONITORING_EC2_PUBLIC_IP
           value: ${{ env.MONITORING_EC2_PUBLIC_IP }}
-          repository: ${{ github.repository }}
-          token: ${{ secrets.GH_PAT }}
+          pa_token: ${{ secrets.GH_PAT }}
+        continue-on-error: true
 
       - name: Create RDS Endpoint Secret
         if: github.event.inputs.action == 'apply' && env.RDS_ENDPOINT != ''
-        uses: hmanzur/actions-set-secret@v2.0.0
+        uses: gliech/create-github-secret-action@v1
         with:
           name: TF_RDS_ENDPOINT
           value: ${{ env.RDS_ENDPOINT }}
-          repository: ${{ github.repository }}
-          token: ${{ secrets.GH_PAT }}
+          pa_token: ${{ secrets.GH_PAT }}
+        continue-on-error: true
 
       - name: Create Grafana URL Secret
         if: github.event.inputs.action == 'apply' && env.GRAFANA_URL != ''
-        uses: hmanzur/actions-set-secret@v2.0.0
+        uses: gliech/create-github-secret-action@v1
         with:
           name: TF_GRAFANA_URL
           value: ${{ env.GRAFANA_URL }}
-          repository: ${{ github.repository }}
-          token: ${{ secrets.GH_PAT }}
+          pa_token: ${{ secrets.GH_PAT }}
+        continue-on-error: true
 
       - name: Create Amplify App URL Secret
         if: github.event.inputs.action == 'apply' && env.AMPLIFY_APP_URL != ''
-        uses: hmanzur/actions-set-secret@v2.0.0
+        uses: gliech/create-github-secret-action@v1
         with:
           name: TF_AMPLIFY_APP_URL
           value: ${{ env.AMPLIFY_APP_URL }}
-          repository: ${{ github.repository }}
-          token: ${{ secrets.GH_PAT }}
+          pa_token: ${{ secrets.GH_PAT }}
+        continue-on-error: true
 
       # Étape 11: Résumé de l'exécution
       - name: Summary
