--- a/.github/workflows/2-backend-deploy.yml
+++ b/.github/workflows/2-backend-deploy.yml
@@ -32,7 +32,7 @@ env:
   JAVA_VERSION: '17'         # Version de Java à utiliser
   JAVA_DISTRIBUTION: 'temurin' # Distribution Java (Adoptium Temurin)
   AWS_REGION: eu-west-3      # Région AWS (Paris)
-  APP_DIR: ./app-java        # Répertoire de l'application Java
+  APP_DIR: app-java          # Répertoire de l'application Java (sans ./ pour éviter les problèmes de chemin)
   WAR_NAME: yourmedia-backend.war # Nom du fichier WAR (sera modifié pour inclure l'environnement)
 
 jobs:
@@ -66,9 +66,25 @@ jobs:
       - name: Build with Maven
         run: |
           echo "::group::Maven Build"
-          mvn -B package --file pom.xml # -B pour le mode batch non interactif
+          # Vérifier que le répertoire existe
+          if [ ! -d "${{ env.APP_DIR }}" ]; then
+            echo "ERREUR: Le répertoire ${{ env.APP_DIR }} n'existe pas!"
+            echo "Contenu du répertoire courant:"
+            ls -la
+            exit 1
+          fi
+
+          # Vérifier que le fichier pom.xml existe
+          if [ ! -f "${{ env.APP_DIR }}/pom.xml" ]; then
+            echo "ERREUR: Le fichier pom.xml n'existe pas dans ${{ env.APP_DIR }}!"
+            echo "Contenu du répertoire ${{ env.APP_DIR }}:"
+            ls -la ${{ env.APP_DIR }}
+            exit 1
+          fi
+
+          # Exécuter Maven
+          cd ${{ env.APP_DIR }} && mvn -B package --file pom.xml # -B pour le mode batch non interactif
           echo "::endgroup::"
-        working-directory: ${{ env.APP_DIR }}
 
       # Étape 5: Configuration des identifiants AWS
       - name: Configure AWS Credentials
@@ -95,10 +111,17 @@ jobs:
       - name: Upload WAR to S3
         run: |
           echo "::group::Upload to S3"
-          aws s3 cp target/${{ env.WAR_NAME }} s3://${{ env.S3_BUCKET }}/builds/backend/${{ env.WAR_NAME }}
+          # Vérifier que le fichier WAR existe
+          if [ ! -f "${{ env.APP_DIR }}/target/${{ env.WAR_NAME }}" ]; then
+            echo "ERREUR: Le fichier WAR n'existe pas: ${{ env.APP_DIR }}/target/${{ env.WAR_NAME }}"
+            echo "Contenu du répertoire target:"
+            ls -la ${{ env.APP_DIR }}/target/
+            exit 1
+          fi
+
+          aws s3 cp ${{ env.APP_DIR }}/target/${{ env.WAR_NAME }} s3://${{ env.S3_BUCKET }}/builds/backend/${{ env.WAR_NAME }}
           echo "WAR téléversé avec succès sur S3: s3://${{ env.S3_BUCKET }}/builds/backend/${{ env.WAR_NAME }}"
           echo "::endgroup::"
-        working-directory: ${{ env.APP_DIR }}
 
       # Étape 7: Configuration de SSH
       - name: Setup SSH
