--- a/.github/workflows/2-backend-deploy.yml
+++ b/.github/workflows/2-backend-deploy.yml
@@ -183,15 +183,52 @@ jobs:
                 sudo apt-get update -y
                 sudo apt-get install -y awscli
             fi
+            echo "--- Vérification des permissions et de l'état de Tomcat ---"
+            sudo ls -la /opt/tomcat/webapps/
+            sudo systemctl status tomcat
+
+            echo "--- Configuration d'AWS CLI ---"
+            # Vérifier si AWS CLI est installé
+            if ! command -v aws &> /dev/null; then
+                sudo apt-get update -y
+                sudo apt-get install -y awscli
+            fi
+
             echo "--- Copie du WAR depuis S3 vers Tomcat ---"
             # Télécharger le WAR depuis S3
             sudo aws s3 cp s3://${{ env.S3_BUCKET }}/builds/backend/${{ env.DEPLOY_WAR_NAME }} /tmp/${{ env.DEPLOY_WAR_NAME }}
 
+            # Vérifier que le fichier a été téléchargé
+            if [ ! -f "/tmp/${{ env.DEPLOY_WAR_NAME }}" ]; then
+                echo "ERREUR: Le fichier WAR n'a pas été téléchargé depuis S3"
+                exit 1
+            fi
+
             # Déployer le WAR avec le nom correct pour correspondre au contexte dans application.properties
             sudo cp /tmp/${{ env.DEPLOY_WAR_NAME }} /opt/tomcat/webapps/yourmedia-backend.war
 
+            # Vérifier que le fichier a été copié
+            if [ ! -f "/opt/tomcat/webapps/yourmedia-backend.war" ]; then
+                echo "ERREUR: Le fichier WAR n'a pas été copié dans le répertoire webapps"
+                exit 1
+            fi
+
             # Supprimer le fichier temporaire
             sudo rm /tmp/${{ env.DEPLOY_WAR_NAME }}
+
+            # Attendre que Tomcat déploie l'application
+            echo "--- Attente du déploiement par Tomcat ---"
+            sleep 10
+
+            # Vérifier que l'application a été déployée
+            if [ ! -d "/opt/tomcat/webapps/yourmedia-backend" ]; then
+                echo "AVERTISSEMENT: Le répertoire yourmedia-backend n'a pas encore été créé par Tomcat. Cela peut prendre plus de temps."
+            else
+                echo "L'application a été déployée avec succès."
+            fi
+
+            # Afficher le contenu du répertoire webapps
+            sudo ls -la /opt/tomcat/webapps/
             echo "--- Déploiement terminé, Tomcat va automatiquement déployer le WAR ---"
           EOF
           echo "::endgroup::"
