--- a/infrastructure/modules/ec2-monitoring/scripts/prometheus.yml
+++ b/infrastructure/modules/ec2-monitoring/scripts/prometheus.yml
@@ -19,9 +19,15 @@ scrape_configs:
 
   - job_name: "node_exporter"
     static_configs:
-      - targets: ["localhost:9100"]
+      - targets: ["localhost:9100"] # Monitoring instance
+      - targets: ["${ec2_java_tomcat_ip}:9100"] # Java/Tomcat instance
 
   - job_name: "spring_boot"
     metrics_path: "/actuator/prometheus"
     static_configs:
-      - targets: ["backend:8080"]
+      - targets: ["${ec2_java_tomcat_ip}:8080/yourmedia-backend"]
+
+  - job_name: "tomcat"
+    static_configs:
+      - targets: ["${ec2_java_tomcat_ip}:8080"]
+    metrics_path: "/metrics"
