--- a/infrastructure/modules/ec2-monitoring/scripts/prometheus.yml
+++ b/infrastructure/modules/ec2-monitoring/scripts/prometheus.yml
@@ -31,3 +31,14 @@ scrape_configs:
     static_configs:
       - targets: ["${ec2_java_tomcat_ip}:8080"]
     metrics_path: "/metrics"
+
+  # Surveillance des services AWS via CloudWatch Exporter
+  - job_name: "cloudwatch"
+    scrape_interval: 60s
+    static_configs:
+      - targets: ["localhost:9106"]
+
+  # Surveillance de MySQL RDS via MySQL Exporter
+  - job_name: "mysql"
+    static_configs:
+      - targets: ["localhost:9104"]
