--- a/infrastructure/modules/ec2-monitoring/docker/sonarqube/sonar.properties
+++ b/infrastructure/modules/ec2-monitoring/docker/sonarqube/sonar.properties
@@ -1,9 +1,10 @@
 # Configuration SonarQube personnalisée
 
 # Base de données
-sonar.jdbc.username=sonar
-sonar.jdbc.password=sonar
-sonar.jdbc.url=jdbc:postgresql://sonarqube-db:5432/sonar
+# Ces valeurs seront remplacées par les variables d'environnement lors du déploiement
+# sonar.jdbc.username=${SONAR_JDBC_USERNAME}
+# sonar.jdbc.password=${SONAR_JDBC_PASSWORD}
+# sonar.jdbc.url=${SONAR_JDBC_URL}
 
 # Serveur web
 sonar.web.host=0.0.0.0
