--- a/app-java/src/main/resources/application.properties
+++ b/app-java/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.application.name=yourmedia-backend
 server.servlet.context-path=/yourmedia-backend
 
 # Database configuration (will be overridden by environment variables)
-spring.datasource.url=jdbc:mysql://localhost:3306/yourmedia
-spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:yourmedia}
+spring.datasource.username=${DB_USERNAME:yourmedia_user}
+spring.datasource.password=${DB_PASSWORD:}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA/Hibernate configuration
